fix: all IntelliJ inspection findings in the backend (289, Project Default)
- Code: row mappers without the unused row number; record patterns
  instead of unused pattern variables; void state helpers with intent
  names (countKind, addPoints, addAudienceVote) instead of Map.merge
  wrappers whose results nobody read; package-private access to the
  room's internal types; a dead AppProperties dependency and PlayerState
  token removed; duplicated SQL and projection code extracted;
  null-safety at the flagged spots; method references; Math.clamp.
- SPA routes move from SpaController to WebConfig view controllers.
- Tests: try-with-resources for sockets they open, Party.Phone#getSocket
  for sockets the party owns, one shared HttpClient, no null latest(),
  getFirst(), a shared class scanner, atomic test clocks, @NullMarked
  test executors.
- Shared IntelliJ settings: project dictionary and the Project Default
  profile with the custom Anthropic and Paddle HTTP headers.
- Build: embedded Postgres binaries for all platforms without OS
  profiles; checkstyle.xml points at a local copy of its DTD.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ABrYV4kUDeoJTm5fDFy7Zi