@@ -28,27 +28,27 @@ class NoAiKeyIT extends AbstractIntegrationTest {
     @Test
     void withoutAnAiKeyTheIntakeWorksAndSecretsAreNotOffered() {
         try (Party party = Party.create(port, json, FAKE, 3)) {
-            Party.Phone p = party.phones.get(0);
-            JsonNode lobby = p.socket().latest();
+            Party.Phone p = party.phones.getFirst();
+            JsonNode lobby = p.getSocket().latest();
             assertThat(lobby.path("secretsOpen").asBoolean(true))
                     .as("no model to check secrets: don't offer them")
                     .isFalse();
             assertThat(party.screen.latest().path("secretsOpen").asBoolean(true))
                     .isFalse();
-            assertThat(p.socket().error("dossier.add", Map.of("text", "A harmless story")))
+            assertThat(p.getSocket().error("dossier.add", Map.of("text", "A harmless story")))
                     .isEqualTo("MODERATION_UNAVAILABLE");
 
-            party.captain().socket().ok("game.start", Map.of());
-            p.socket().phase("INTAKE");
-            JsonNode blocked = p.socket()
-                    .reply(p.socket()
+            party.captain().getSocket().ok("game.start", Map.of());
+            p.getSocket().phase("INTAKE");
+            JsonNode blocked = p.getSocket()
+                    .reply(p.getSocket()
                             .send(
                                     "intake.submit",
                                     Map.of("answers", List.of("Pizza", "call +44 20 7946 0958", "Karaoke"))));
             assertThat(blocked.path("data").path("code").asString())
                     .as("rules still apply")
                     .isEqualTo("MODERATION_BLOCKED");
-            p.socket().ok("intake.submit", Map.of("answers", List.of("Pizza", "Dancing", "Karaoke")));
+            p.getSocket().ok("intake.submit", Map.of("answers", List.of("Pizza", "Dancing", "Karaoke")));
             assertThat(party.screen.state(s -> s.path("intake").path("done").asInt() == 1))
                     .isNotNull();
         }
